fix: composer header overlap with controls

--- a/less/forum/Composer.less
+++ b/less/forum/Composer.less
@@ -41,18 +41,23 @@
     line-height: 1.5em;
     color: var(--secondary-color);
 
-    &, input, a {
+    &,
+    input,
+    a {
       font-size: 14px;
       font-weight: normal;
     }
-    input, a {
+    input,
+    a {
       color: inherit;
     }
     input {
       font-size: 16px;
       width: 500px;
 
-      &, &[disabled], &:focus {
+      &,
+      &[disabled],
+      &:focus {
         background: none;
         border: 0;
         padding: 0 20px 0 0;
@@ -230,7 +235,8 @@
     height: 300px;
     transition: background 0.2s, box-shadow 0.2s;
 
-    &.active, &.fullScreen {
+    &.active,
+    &.fullScreen {
       background: var(--body-bg);
     }
     &.active:not(.fullScreen) {
@@ -258,6 +264,8 @@
     }
   }
   .ComposerBody-header {
+    margin-right: 120px;
+
     .fullScreen & {
       margin-bottom: 20px;
     }
@@ -279,7 +287,8 @@
     margin-bottom: -17px;
     position: relative;
 
-    .minimized &, .fullScreen & {
+    .minimized &,
+    .fullScreen & {
       display: none;
     }
   }
@@ -287,14 +296,16 @@
     float: left;
     .Avatar--size(64px);
 
-    .minimized &, .fullScreen & {
+    .minimized &,
+    .fullScreen & {
       display: none;
     }
   }
   .ComposerBody-content {
     margin-left: 85px;
 
-    .minimized &, .fullScreen & {
+    .minimized &,
+    .fullScreen & {
       margin-left: 0;
     }
   }
